--- a/second-page.html
+++ b/second-page.html
@@ -30,7 +30,7 @@
       <p>I hope that this birthday is as wonderful as you are, and that it is filled with all of your favourite things. You deserve the very best, and I am so grateful that I get to share this special day with you. I love you more and more each day, and I promise to be here for you always, supporting you and cherishing every moment we have together.</p>
       <h2>Happy birthday my love,</h2>
       <p>may your day be as wonderful and beautiful as you are.</p>
-      <a href="birthday.html">
+      <a href="index.html">
         <button>Go Back</button>
       </a>
     </div>
